# pypixel

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: code-quality.yml
examples/: generate_code.py  generate_images.py
pypixel/: __init__.py  constants.py  core.py  exceptions.py
pypixel/models/: __init__.py  base.py  cohere.py  openai.py  starcoder.py
pypixel/prompts/: __init__.py  edit_image.py  fix_errors.py  generate_code.py  generate_image.py  prompt.py
pypixelai/models/: base.py  openai.py  starcoder.py
pypixelai/prompts/: edit_image.py  generate_code.py  prompt.py
source/: conf.py  index.rst
test/: ex1.py  ex2.py  make_dog_brighter.py  test1.py  test2.py
tests/: test_cohere.py  test_models.py  test_openai.py  test_prompts.py  test_pypixel.py  test_starcoder.py
