[tool.poetry]
name = "pypixel"
version = "0.1.0"
description = "Image processing made easy"
authors = ["Navneet Desai <navneetdesai44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
